--- a/TbdModule/src/main/res/values-fr/strings.xml
+++ b/TbdModule/src/main/res/values-fr/strings.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Gestionintelligentedelasalled’étudedelabibliothèqueetsystèmedeconfort</string>
+    <string name="dialog_message">Do you want to exit?</string>
+    <string name="dialog_title">Smart Libray Study Room App</string>
+    <string name="no">no</string>
+    <string name="yes">yes</string>
 </resources>
