Added a few comments of my name (Mathew Anderson)

--- a/TbdModule/src/main/res/values-fr/strings.xml
+++ b/TbdModule/src/main/res/values-fr/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--Mathew Anderson-Saavedra n01436706 Section RCA -->
 <resources>
     <string name="app_name">Gestionintelligentedelasalled’étudedelabibliothèqueetsystèmedeconfort</string>
     <string name="dialog_message">Do you want to exit?</string>
