--- a/TbdModule/src/main/res/values/strings.xml
+++ b/TbdModule/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+<!--Mathew Anderson-Saavedra n01436706 Section RCA -->
 <resources>
     <string name="app_name">SmartLibraryStudyRoomManagementAndComfortSystem</string>
     <string name="dialog_message">Do you want to exit?</string>
