--- a/TbdModule/src/main/res/values/strings.xml
+++ b/TbdModule/src/main/res/values/strings.xml
@@ -5,4 +5,12 @@
     <string name="dialog_title">Smart Libray Study Room App</string>
     <string name="no">no</string>
     <string name="yes">yes</string>
+    <string name="test1">test1</string>
+    <string name="test2">test2</string>
+    <string name="test3">test3</string>
+    <string name="test4">test4</string>
+    <string name="first_thing">First thing</string>
+    <string name="second_thing">Second thing</string>
+    <string name="third_thing">Third Thing</string>
+    <string name="fourth_thing">Fourth Thing</string>
 </resources>
