Added group member information to string.xml files as comments.

--- a/TbdModule/src/main/res/values-fr/strings.xml
+++ b/TbdModule/src/main/res/values-fr/strings.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--Mathew Anderson-Saavedra n01436706 Section RCA -->
+<!--
+Mathew Anderson-Saavedra n01436706
+Nicole Chlea Manaoat N01565017
+Medi Muamba Nzambi N01320883
+Safah Virk N01596470
+Section RCA
+-->
 <resources>
     <string name="app_name">Gestionintelligentedelasalled’étudedelabibliothèqueetsystèmedeconfort</string>
     <string name="dialog_message">Do you want to exit?</string>
