--- a/TbdModule/src/main/res/values/strings.xml
+++ b/TbdModule/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
-<!--Mathew Anderson-Saavedra n01436706 Section RCA -->
+<!--
+Mathew Anderson-Saavedra n01436706
+Nicole Chlea Manaoat N01565017
+Medi Muamba Nzambi N01320883
+Safah Virk N01596470
+Section RCA
+-->
 <resources>
     <string name="app_name">SmartLibraryStudyRoomManagementAndComfortSystem</string>
     <string name="dialog_message">Do you want to exit?</string>
