--- a/TbdModule/src/main/res/values-fr/strings.xml
+++ b/TbdModule/src/main/res/values-fr/strings.xml
@@ -8,16 +8,16 @@ Section RCA
 -->
 <resources>
     <string name="app_name">Gestionintelligentedelasalled’étudedelabibliothèqueetsystèmedeconfort</string>
-    <string name="dialog_message">Do you want to exit?</string>
-    <string name="dialog_title">Smart Libray Study Room App</string>
-    <string name="no">no</string>
-    <string name="yes">yes</string>
-    <string name="test1">test1</string>
-    <string name="test2">test2</string>
-    <string name="test3">test3</string>
-    <string name="test4">test4</string>
-    <string name="first_thing">First thing</string>
-    <string name="second_thing">Second thing</string>
-    <string name="third_thing">Third Thing</string>
-    <string name="fourth_thing">Fourth Thing</string>
+    <string name="dialog_message">Voulez-vous sortir?</string>
+    <string name="dialog_title">Application de salle d’étude de bibliothèque intelligente</string>
+    <string name="no">non</string>
+    <string name="yes">oui</string>
+    <string name="test1">Essai1</string>
+    <string name="test2">Essai2</string>
+    <string name="test3">Essai3</string>
+    <string name="test4">Essai4</string>
+    <string name="first_thing">A la première heure</string>
+    <string name="second_thing">Deuxième chose</string>
+    <string name="third_thing">Troisième chose</string>
+    <string name="fourth_thing">Quatrième chose</string>
 </resources>
