I did a lot -Implemented ImageButtons on each of the building Fragments -Will ask for a code on 1 of the image buttons -When entered, will bring on a different fragment container containing the room settings

--- a/TbdModule/src/main/res/values/strings.xml
+++ b/TbdModule/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@ Section RCB
     <string name="second_thing">Second thing</string>
     <string name="third_thing">Third Thing</string>
     <string name="fourth_thing">Fourth Thing</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
