--- a/TbdModule/src/main/res/values/strings.xml
+++ b/TbdModule/src/main/res/values/strings.xml
@@ -22,4 +22,8 @@ Section RCB
     <string name="fourth_thing">Fourth Thing</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="feedback">Feedback</string>
+    <string name="about_us">About Us</string>
+    <string name="exit">Exit</string>
+    <string name="settings">Settings</string>
 </resources>
