Fix all hardcoding and update of translating english to french.

--- a/TbdModule/src/main/res/values-fr/strings.xml
+++ b/TbdModule/src/main/res/values-fr/strings.xml
@@ -21,4 +21,41 @@ Section RCB
     <string name="second_thing">Deuxième chose</string>
     <string name="third_thing">Troisième chose</string>
     <string name="fourth_thing">Quatrième chose</string>
+    <string name="hello_blank_fragment">Bonjour fragment vide</string>
+    <string name="enter_access_code">Entrez le code d’accès</string>
+    <string name="ok">D’ACCORD</string>
+    <string name="_1234">1234</string>
+    <string name="cancel">Annuler</string>
+    <string name="room_1d">Chambre 1</string>
+    <string name="room_2d">Chambre 2</string>
+    <string name="room_3d">Chambre 3</string>
+    <string name="room_4d">Chambre 4</string>
+    <string name="building_d">BÂTIMENT D</string>
+    <string name="room_1a">Chambre 1</string>
+    <string name="room_2a">Chambre 2</string>
+    <string name="room_3a">Chambre 3</string>
+    <string name="room_4a">Chambre 4</string>
+    <string name="building_a">BÂTIMENT A</string>
+    <string name="idk">IDK</string>
+    <string name="lighting">ÉCLAIRAGE</string>
+    <string name="room_1b">Chambre 1</string>
+    <string name="room_2b">Chambre 2</string>
+    <string name="room_3b">Chambre 3</string>
+    <string name="room_4b">Chambre 4</string>
+    <string name="building_b">BÂTIMENT B</string>
+    <string name="room_1c">Chambre 1</string>
+    <string name="room_2c">Chambre 2</string>
+    <string name="room_3c">Chambre 3</string>
+    <string name="room_4c">Chambre 4</string>
+    <string name="building_c">BÂTIMENT C</string>
+    <string name="time">HEURE</string>
+    <string name="temperature">TEMPÉRATURE</string>
+    <string name="building_a2">BÂTIMENT A</string>
+    <string name="building_b2">BÂTIMENT B</string>
+    <string name="building_c2">BÂTIMENT C</string>
+    <string name="building_d2">BÂTIMENT D</string>
+    <string name="temperature2">Température</string>
+    <string name="lighting2">Éclairage</string>
+    <string name="time2">Heure</string>
+    <string name="idk2">idk</string>
 </resources>
