--- a/TbdModule/src/main/res/values/strings.xml
+++ b/TbdModule/src/main/res/values/strings.xml
@@ -22,4 +22,40 @@ Section RCB
     <string name="fourth_thing">Fourth Thing</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="enter_access_code">Enter Access Code</string>
+    <string name="ok">OK</string>
+    <string name="_1234">1234</string>
+    <string name="cancel">Cancel</string>
+    <string name="room_1d">Room 1</string>
+    <string name="room_2d">Room 2</string>
+    <string name="room_3d">Room 3</string>
+    <string name="room_4d">Room 4</string>
+    <string name="building_d">BUILDING D</string>
+    <string name="room_1a">Room 1</string>
+    <string name="room_2a">Room 2</string>
+    <string name="room_3a">Room 3</string>
+    <string name="room_4a">Room 4</string>
+    <string name="building_a">BUILDING A</string>
+    <string name="idk">IDK</string>
+    <string name="lighting">LIGHTING</string>
+    <string name="room_1b">Room 1</string>
+    <string name="room_2b">Room 2</string>
+    <string name="room_3b">Room 3</string>
+    <string name="room_4b">Room 4</string>
+    <string name="building_b">BUILDING B</string>
+    <string name="room_1c">Room 1</string>
+    <string name="room_2c">Room 2</string>
+    <string name="room_3c">Room 3</string>
+    <string name="room_4c">Room 4</string>
+    <string name="building_c">BUILDING C</string>
+    <string name="time">TIME</string>
+    <string name="temperature">TEMPERATURE</string>
+    <string name="building_a2">Building A</string>
+    <string name="building_b2">Building B</string>
+    <string name="building_c2">Building C</string>
+    <string name="building_d2">Building D</string>
+    <string name="temperature2">Temperature</string>
+    <string name="lighting2">Lighting</string>
+    <string name="time2">Time</string>
+    <string name="idk2">idk</string>
 </resources>
