--- a/TbdModule/src/main/res/values/strings.xml
+++ b/TbdModule/src/main/res/values/strings.xml
@@ -21,9 +21,13 @@ Section RCB
     <string name="third_thing">Third Thing</string>
     <string name="fourth_thing">Fourth Thing</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="feedback">Feedback</string>
     <string name="about_us">About Us</string>
     <string name="exit">Exit</string>
     <string name="settings">Settings</string>
+    <string name="building_a">Building A</string>
+    <string name="building_b">Building B</string>
+    <string name="building_c">Building C</string>
+    <string name="building_d">Building D</string>
 </resources>
