--- a/TbdModule/src/main/res/values-fr/strings.xml
+++ b/TbdModule/src/main/res/values-fr/strings.xml
@@ -49,7 +49,7 @@ Section RCB
     <string name="room_4c">Chambre 4</string>
     <string name="building_c">BÂTIMENT C</string>
     <string name="time">HEURE</string>
-    <string name="temperature">TEMPÉRATURE</string>
+    <string name="temperature">TempÉrature:</string>
     <string name="building_a2">BÂTIMENT A</string>
     <string name="building_b2">BÂTIMENT B</string>
     <string name="building_c2">BÂTIMENT C</string>
@@ -58,4 +58,7 @@ Section RCB
     <string name="lighting2">Éclairage</string>
     <string name="time2">Heure</string>
     <string name="idk2">idk</string>
+    <string name="air_quality">Air Quality:</string>
+    <string name="room_101a">Room 101A</string>
+    <string name="on_or_off">On or Off</string>
 </resources>
