--- a/TbdModule/src/main/res/values-fr/strings.xml
+++ b/TbdModule/src/main/res/values-fr/strings.xml
@@ -61,4 +61,7 @@ Section RCB
     <string name="air_quality">Air Quality:</string>
     <string name="room_101a">Room 101A</string>
     <string name="on_or_off">On or Off</string>
+    <string name="timer">Timer:</string>
+    <string name="how_many_people_in_the_room">How many people in the room:</string>
+    <string name="open_or_close_door">Open or Close Door:</string>
 </resources>
