Login Screen -Created another Fragment for login -Changed MainActivity where login is the first thing to see -Once we click login, brings us to the Buildings

--- a/TbdModule/src/main/res/values-fr/strings.xml
+++ b/TbdModule/src/main/res/values-fr/strings.xml
@@ -64,4 +64,7 @@ Section RCB
     <string name="timer">Timer:</string>
     <string name="how_many_people_in_the_room">How many people in the room:</string>
     <string name="open_or_close_door">Open or Close Door:</string>
+    <string name="username">Username</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
 </resources>
