--- a/TbdModule/src/main/res/values/strings.xml
+++ b/TbdModule/src/main/res/values/strings.xml
@@ -79,4 +79,6 @@ Section RCB
     <string name="attachment_title">attachment_title</string>
     <string name="attachment_summary_off">attachment_title</string>
     <string name="attachment_summary_on">attachment_title</string>
+    <string name="navigation_drawer_open">Open Drawer</string>
+    <string name="navigation_drawer_close">Close Drawer</string>
 </resources>
