Improvements to image buttons -Did the rest of the buttons in all fragments -All contain ids so it can be changed in the code if the database demands it

--- a/TbdModule/src/main/res/values-fr/strings.xml
+++ b/TbdModule/src/main/res/values-fr/strings.xml
@@ -82,4 +82,6 @@ Section RCB
     <string name="navigation_drawer_open">Open Drawer</string>
     <string name="navigation_drawer_close">Close Drawer</string>
     <string name="options">Options</string>
+    <string name="vacant">Vacant</string>
+    <string name="occupied">Occupied</string>
 </resources>
