added  logo to login screen

--- a/TbdModule/src/main/res/values/strings.xml
+++ b/TbdModule/src/main/res/values/strings.xml
@@ -84,4 +84,5 @@ Section RCB
     <string name="options">Options</string>
     <string name="vacant">Vacant</string>
     <string name="occupied">Occupied</string>
+    <string name="login_icon_desc">login_icon_desc</string>
 </resources>
