-Completed design of User Profile Fragment -Profile button now leads to Profile Fragment

--- a/TbdModule/src/main/res/values-fr/strings.xml
+++ b/TbdModule/src/main/res/values-fr/strings.xml
@@ -84,4 +84,9 @@ Section RCB
     <string name="options">Options</string>
     <string name="vacant">Vacant</string>
     <string name="occupied">Occupied</string>
+    <string name="login_icon_desc">login_icon_desc</string>
+    <string-array name="school_options">
+        <item>Humber North</item>
+        <item>Sheridan</item>
+    </string-array>
 </resources>
