--- a/TbdModule/src/main/res/values/strings.xml
+++ b/TbdModule/src/main/res/values/strings.xml
@@ -72,7 +72,7 @@ Section RCB
     <string name="userinfo">User Info</string>
     <string name="reply_title">Reply Title</string>
     <string name="sync_header">Sync Header</string>
-    <string name="landscape">landscape</string>
+    <string name="landscape">Landscape</string>
     <string name="attachment_title">attachment_title</string>
     <string name="attachment_summary_off">attachment_title</string>
     <string name="attachment_summary_on">attachment_title</string>
@@ -93,4 +93,5 @@ Section RCB
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="no_account_sign_up">Dont have an account? Sign Up</string>
     <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
+    <string name="settings_screen">Settings</string>
 </resources>
