-Added svg vector file and new vector assets. -Added new fragment links in the options menu -Added settings screen -Implementing Night Mode in settings screen. -Adding Vector assets and implementing notifications setting. -New Vector files added. -Font size functionality added in settings screen. -Completed settings screen design and starting Implementations -Implemented dial run time permission in settings screen.

--- a/TbdModule/src/main/res/values/strings.xml
+++ b/TbdModule/src/main/res/values/strings.xml
@@ -94,4 +94,5 @@ Section RCB
     <string name="no_account_sign_up">Dont have an account? Sign Up</string>
     <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
     <string name="settings_screen">Settings</string>
+    <string name="contact_us">Contact Us</string>
 </resources>
