removed hardcoding from xml files

--- a/TbdModule/src/main/res/values/strings.xml
+++ b/TbdModule/src/main/res/values/strings.xml
@@ -105,4 +105,57 @@ Section RCB
     <string name="users">users</string>
     <string name="you_have_registered_an_account">You have registered an account!</string>
     <string name="tel_1234567789">tel:1234567789</string>
+    <string name="email">Email</string>
+    <string name="LOGIN">LOGIN</string>
+    <string name="OR">OR</string>
+    <string name="sign_in_with_google1">Sign in with Google</string>
+    <string name="don_t_have_an_account_sign_up1">Don\'t have an account? Sign Up</string>
+    <string name="full_name">Full Name</string>
+    <string name="email_address">Email Address</string>
+    <string name="confirm_password">Confirm Password</string>
+    <string name="create_account">Create Account</string>
+    <string name="already_have_an_account_login">Already have an account? Login</string>
+    <string name="please_submit_a_review">Please Submit a Review!</string>
+    <string name="your_name">Your Name</string>
+    <string name="your_phone_number">Your Phone Number</string>
+    <string name="your_email">Your Email</string>
+    <string name="your_comments">Your Comments</string>
+    <string name="submit_review">Submit Review</string>
+    <string name="roomd202">RoomD202</string>
+    <string name="roomd203">RoomD203</string>
+    <string name="roomd204">RoomD204</string>
+    <string name="rooma201">RoomA201</string>
+    <string name="rooma202">RoomA202</string>
+    <string name="rooma203">RoomA203</string>
+    <string name="rooma204">RoomA204</string>
+    <string name="roomb201">RoomB201</string>
+    <string name="roomb202">RoomB202</string>
+    <string name="roomb203">RoomB203</string>
+    <string name="roomb204">RoomB204</string>
+    <string name="app_setttings">App Setttings</string>
+    <string name="night_mode">Night Mode</string>
+    <string name="notifications">Notifications</string>
+    <string name="landscape1">Landscape</string>
+    <string name="font_size">Font Size</string>
+    <string name="about_us1">About Us</string>
+    <string name="preferences">Preferences</string>
+    <string name="feedback1">Feedback</string>
+    <string name="roomc201">RoomC201</string>
+    <string name="roomc202">RoomC202</string>
+    <string name="roomc203">RoomC203</string>
+    <string name="roomc204">RoomC204</string>
+    <string name="profile_details">profile Details</string>
+    <string name="your_name1">Your Name</string>
+    <string name="email_address1">Email Address</string>
+    <string name="password2">password</string>
+    <string name="save">Save</string>
+    <string name="nametesting">NameTesting</string>
+    <string name="email2">email</string>
+    <string name="buildings">Buildings</string>
+    <string name="misc">Misc</string>
+    <string name="settings1">Settings</string>
+    <string name="profile">Profile</string>
+    <string name="feedback2">Feedback</string>
+    <string name="logout">Logout</string>
+    <string name="logout1">Logout</string>
 </resources>
