--- a/TbdModule/src/main/res/values/strings.xml
+++ b/TbdModule/src/main/res/values/strings.xml
@@ -158,4 +158,15 @@ Section RCB
     <string name="feedback2">Feedback</string>
     <string name="logout">Logout</string>
     <string name="logout1">Logout</string>
+    <string name="location_tracking_disabled">Location tracking disabled</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="roomd201">RoomD201</string>
+    <string name="app_setttings1">App Setttings</string>
+    <string name="night_mode1">Night Mode</string>
+    <string name="landscape2">Landscape</string>
+    <string name="font_size1">Font Size</string>
+    <string name="about_us2">About Us</string>
+    <string name="location">Location</string>
+    <string name="feedback3">Feedback</string>
 </resources>
