--- a/TbdModule/src/main/res/values-fr/strings.xml
+++ b/TbdModule/src/main/res/values-fr/strings.xml
@@ -93,4 +93,5 @@ Section RCB
     <string name="sign_in_with_google">Sign in with Google</string>
     <string name="no_account_sign_up">Dont have an account? Sign Up</string>
     <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
+    <string name="access_code_not_set">Access code not set</string>
 </resources>
