--- a/TbdModule/src/main/res/values/strings.xml
+++ b/TbdModule/src/main/res/values/strings.xml
@@ -179,4 +179,5 @@ Section RCB
     <string name="remember_me3">remember_me</string>
     <string name="location_permission_granted">Location permission granted</string>
     <string name="location_permission_denied">Location permission denied</string>
+    <string name="access_code_not_set">Access code not set</string>
 </resources>
