Name And Email shows in the navigation drawer for each user that logs-in

--- a/TbdModule/src/main/res/values/strings.xml
+++ b/TbdModule/src/main/res/values/strings.xml
@@ -179,4 +179,5 @@ Section RCB
     <string name="remember_me3">remember_me</string>
     <string name="location_permission_granted">Location permission granted</string>
     <string name="location_permission_denied">Location permission denied</string>
+    <string name="name">name</string>
 </resources>
