--- a/TbdModule/src/main/res/values/strings.xml
+++ b/TbdModule/src/main/res/values/strings.xml
@@ -184,4 +184,5 @@ Section RCB
     <string name="name1">name</string>
     <string name="email1">email</string>
     <string name="access_code_not_set">Access code not set</string>
+    <string name="client_id">932079205234-31a3dvvotifpdtqp1e55aijuld9hv7sl.apps.googleusercontent.com</string>
 </resources>
