-Added svg vector file and new vector assets. -Added new fragment links in the options menu -Added settings screen -Implementing Night Mode in settings screen. -Adding Vector assets and implementing notifications setting. -New Vector files added. -Font size functionality added in settings screen. -Completed settings screen design and starting Implementations -Implemented dial run time permission in settings screen. -Feedback in settings now takes us to feedback screen. -Back button implementation -Updated background colors in all screens for better screen flow. -Location runtime permission implemented. -Room settings implementation continued. -Modifying menu items layout. -Removed call option from settings screen. -Complications with menu item background. -Moving room settings implementations to one screen. -Updated the room settings screen so Lighting, Temperature and Time are tracked in one screen. -Room settings design -Removing unused screens -Updated settings screen and removed phone call implementation. -LoginActivity Test implemented and commented out to avoid app crash. -Switching to identical code for all room fragments for testing purposes. -Added a progress bar displaying for the log in page. -Made sure progress bar only displays when login credentials are correct and stops displaying when credentials are incorrect. -Toast displays in case of database error. -Added autofillhints in login xml file. -Completed 10 test cases in LoginActivityTest class. -Moved and deleted LoginActivity test from src/test to android/test. -Added a fragment AboutUs which will include some basic info. -About us fragment will include some info about us the app and will be accessed through settings screen. -Added a FAB on the main page which will have some functionality.

--- a/TbdModule/src/main/res/values/strings.xml
+++ b/TbdModule/src/main/res/values/strings.xml
@@ -184,4 +184,10 @@ Section RCB
     <string name="name1">name</string>
     <string name="email1">email</string>
     <string name="access_code_not_set">Access code not set</string>
+    <string name="generate_code">Generate code</string>
+    <string name="profile_image">Profile Image</string>
+    <string name="aboutUs">We are committed to providing the best services to our users with an innovative and customer-centric approach. Our mission is to enhance your experience and deliver quality.</string>
+    <string name="contact_Us">Contact Us</string>
+    <string name="aboutUs_image">Profile Image</string>
+    <string name="info_aboutUs">About Us</string>
 </resources>
