-Timer is now added to roomsettingsFragment -When timer reaches 0, it will kick the user out of the room, and change the room to vacant.  It will also display a snackbar to tell the user that. -Timer will still keep going even when the user exits the room on the app

--- a/TbdModule/src/main/res/values-fr/strings.xml
+++ b/TbdModule/src/main/res/values-fr/strings.xml
@@ -190,4 +190,5 @@ Section RCB
     <string name="aboutUs">We are committed to providing the best services to our users with an innovative and customer-centric approach. Our mission is to enhance your experience and deliver quality.</string>
     <string name="aboutUs_image">Profile Image</string>
     <string name="info_aboutUs">About Us</string>
+    <string name="actualTime">Time:</string>
 </resources>
